Update by Secer

--- a/1109.seo/index.html
+++ b/1109.seo/index.html
@@ -130,7 +130,7 @@ var jiathis_config = {data_track_clickback:'true'};
 
   <div class="article-tags">
   
-  <span></span> <a href="/tag/xss/">xss</a><a href="/tag/Wordpress/">Wordpress</a><a href="/tag/Xsser/">Xsser</a>
+  <span></span> <a href="/tag/Wordpress/">Wordpress</a><a href="/tag/xss/">xss</a><a href="/tag/Xsser/">Xsser</a>
   </div>
 
 
